--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.13",
