--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.13",
+    "gh-pages": "^5.0.0",
     "gsap": "^3.11.5",
     "three": "^0.152.2"
   }
