--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
@@ -18,7 +17,6 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.13",
-    "gh-pages": "^5.0.0",
     "gsap": "^3.11.5",
     "three": "^0.152.2"
   }
