--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.13",
     "gsap": "^3.11.5",
+    "swiper": "^11.1.15",
     "three": "^0.152.2"
   }
 }
